<resources>
    <string name="app_name">Academia</string>
    <string name="image_description_main_menu_bg">Main Menu Screen</string>
    <string name="button_start_game">Start the Game</string>
    <string name="button_store">Store Button</string>
    <string name="button_settings">Settings Button</string>
    <string name="button_achievements">Achievements Button</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="background_bar">Background Bar</string>
    <string name="header_meter_label">Burn Out-O-Meter</string>
    <string name="health_bar">Health Bar</string>
    <string name="clock_background">Clock Background</string>
    <string name="label_end_of_class">End of Class</string>
    <string name="background_carpet">Carpet Background</string>
    <string name="timer_amount">3:00</string>
    <string name="label_timer">Timer</string>
    <string name="student1">Student 1</string>
    <string name="student2">Student 2</string>
    <string name="lightbulb1">Light Bulb 1</string>
    <string name="background_view">Background of the View</string>
    <string name="lightbulb2">Light Bulb 2</string>
    <string name="student3">Student 3</string>
    <string name="lightbulb3">Light Bulb 3</string>
    <string name="student4">Student 4</string>
    <string name="lightbulb4">Light Bulb 4</string>
    <string name="lightbulb5">Light Bulb 5</string>
    <string name="lightbulb6">Light Bulb 6</string>
    <string name="student5">Student 5</string>
    <string name="student6">Student 6</string>
    <string name="button_ok">OK</string>
    <string name="text_end_of_class">Class has ended.</string>
    <string name="text_bell">The Bell Has Rung</string>
    <string name="time_over">0:00</string>
    <string name="question">Question</string>
    <string name="positive_choice">Positive</string>
    <string name="negative_choice">Negative</string>
</resources>
