<?xml version="1.1" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_description_main_menu_bg"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_menu" />

    <ImageButton
        android:id="@+id/HeadClassButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:alpha="0.02"
        android:background="@null"
        android:backgroundTint="@null"
        android:contentDescription="@string/button_start_game"
        android:src="@android:color/holo_green_dark"
        android:tint="@null"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.17" />

    <ImageButton
        android:id="@+id/storeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:alpha="0.02"
        android:background="@null"
        android:backgroundTint="@null"
        android:contentDescription="@string/button_store"
        android:tint="@null"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.17"
        app:srcCompat="@android:color/holo_orange_dark" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.02"
        android:background="@null"
        android:contentDescription="@string/button_settings"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="@+id/HeadClassButton"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.17"
        app:srcCompat="@android:color/holo_orange_light" />

    <ImageButton
        android:id="@+id/achievementsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.02"
        android:background="@null"
        android:contentDescription="@string/button_achievements"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/storeButton"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.17"
        app:srcCompat="@android:color/holo_red_dark" />


</android.support.constraint.ConstraintLayout>